# tau-bench-agents

./: .dockerignore  .gitignore  CLOUDFLARE_SETUP.md  Dockerfile  FIXES_SUMMARY.md  HOW_TO_SWITCH_PROVIDER.txt  Procfile  QUICKSTART.md  README.md  README_a2a.md  README_mcp.md  SYSTEMS_OVERVIEW.md  check_status.sh  main.py  mcp_server_example.py  pyproject.toml  restart_all.sh  run.sh  start_launchers.sh  test_mcp_tools.py  test_reset.py
.ab/agents/c269f71eaa3e4ac0b9bc8ae5d7277efb/: agent_card
implementations/a2a/green_agent/: agent.py
implementations/a2a/white_agent/: agent.py
implementations/mcp/: PASS_K_EVALUATION.md  run_pass_k_test.sh  scenario_pass_k.toml  scenario_reasoning.toml  scenario_stateless.toml  shared_config.py
implementations/mcp/green_agent/: agent.py  tau_green_agent_mcp.toml  tools.py
implementations/mcp/my_util/: my_a2a.py
launchers/: green_launcher_mcp.py  white_launcher.py
scripts/: check_llm_config.sh  check_status.sh  mcp_server_example.py  run_ctrl_normalized.py  start_mcp.sh  start_ngrok_ctrls.sh  test_mcp_tools.py  test_openrouter_config.sh  use_openai.sh  use_openrouter.sh
src/: green_launcher.py  terminal_launcher.py
src/green_agent/: agent.py  tau_green_agent.toml
src/white_agent/: agent.py  tau_white_agent.toml
to_delete/: restructure.sh  start_launchers_side_by_side.sh  start_refactored_only.sh
to_delete/src/: green_launcher_refactored.py  white_launcher.py
to_delete/unused_files/: run_green_agent.sh  run_white_agent.sh  screnario.toml  test_launchers.py
unused_files/: watch_logs.sh
(+9 files in other folders)
