[project]
name = "tau-bench-agents"
version = "0.1.0"
description = "Implementation of τ-bench integration for AgentBeats."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.3.8",
    "anthropic>=0.30.0", 
    "dotenv>=0.9.9",
    "tau-bench",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
]

[tool.uv.sources]
tau-bench = { git = "https://github.com/sierra-research/tau-bench.git" }
